option('enable_debug_output', type: 'boolean', value: false, description: '')

# XXX we need to list here all options that are set in our native/cross files to avoid meson error starting from ver 0.61
option('enable_jemalloc', type: 'boolean', description: 'ignored in this project - present only to remove meson warnings', yield: true)